fix black flicker for light page refresh or navigating to another light page in light mode

--- a/css/outer.css
+++ b/css/outer.css
@@ -3,14 +3,14 @@ body,
 html {
   width: 100%;
   height: 100%;
-  background-color: #f7f7f7;
 }
 body {
   font-family: "Lato", sans-serif;
   font-weight: 300;
-  color: #000;
   position: relative;
   padding-top: 130px;
+  opacity: 1;
+  transition: 0.2s opacity;
 }
 
 h1,
@@ -165,20 +165,6 @@ p {
   to {
     background-color: #f7f7f7;
   }
-}
-@keyframes darkToLight {
-  from {
-    background-color: #1b1b1d;
-  }
-
-  to {
-    background-color: #f7f7f7;
-  }
-}
-.dark-to-light {
-  background-color: #1b1b1d;
-  animation-name: darkToLight;
-  -webkit-animation-name: darkToLight;
 }
 .sliding-middle-out {
   display: inline-block;
